# libxs

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  acinclude.m4  configure.ac  version.sh
builds/msvc/: Makefile.am  msvc12.sln
builds/msvc/inproc_lat/: inproc_lat-vc12.vcxproj
builds/msvc/inproc_thr/: inproc_thr-vc12.vcxproj
builds/msvc/libxs/: libxs-vc12.vcxproj  libxs.vcxproj  libxs.vcxproj.filters
builds/msvc/libzmq/: libzmq-vc12.vcxproj
builds/msvc/local_lat/: local_lat-vc12.vcxproj
builds/msvc/local_thr/: local_thr-vc12.vcxproj
builds/msvc/properties/: Crossroads.props
builds/msvc/remote_lat/: remote_lat-vc12.vcxproj
builds/msvc/remote_thr/: remote_thr-vc12.vcxproj
builds/msvc/tests/: tests-vc12.vcxproj  tests.vcxproj  tests.vcxproj.filters
doc/: Makefile.am  xs.txt  xs_bind.txt  xs_connect.txt  xs_getsockopt.txt  xs_inproc.txt  xs_ipc.txt  xs_pgm.txt  xs_recv.txt  xs_recvmsg.txt  xs_setsockopt.txt  xs_shutdown.txt  xs_socket.txt  xs_tcp.txt
include/: xs.h  zmq.h  zmq_utils.h
include/xs/: xs.h
perf/: Makefile.am  inproc_lat.cpp  inproc_thr.cpp  local_lat.cpp  local_thr.cpp  remote_lat.cpp  remote_thr.cpp
src/: Makefile.am  address.cpp  address.hpp  atomic_counter.hpp  atomic_ptr.hpp  command.hpp  core.cpp  ctx.cpp  ctx.hpp  decoder.cpp  devpoll.cpp  devpoll.hpp  dist.cpp  encoder.cpp  encoder.hpp  epoll.cpp  epoll.hpp  err.cpp  err.hpp  io_thread.cpp  io_thread.hpp  ip.cpp  ip.hpp  ipc_connecter.cpp  ipc_connecter.hpp  ipc_listener.cpp  kqueue.cpp  kqueue.hpp  lb.cpp  mailbox.cpp  mailbox.hpp  msg.cpp  object.cpp  object.hpp  options.cpp  options.hpp  own.cpp  own.hpp  pair.cpp  pair.hpp  (+67 more)
tests/: Makefile.am  backlog.cpp  emptyctx.cpp  hwm.cpp  invalid_rep.cpp  libzmq21.cpp  linger.cpp  max_sockets.cpp  msg_flags.cpp  pair_inproc.cpp  pair_ipc.cpp  pair_tcp.cpp  polltimeo.cpp  pubsub_udp.cpp  reconnect.cpp  reqrep_device.cpp  reqrep_inproc.cpp  reqrep_ipc.cpp  reqrep_tcp.cpp  resubscribe.cpp  shutdown.cpp  shutdown_stress.cpp  sub_forward.cpp  survey.cpp  tests.cpp  testutil.hpp  timeo.cpp  wireformat.cpp
