LIBXS_DIST = libxs/libxs.vcxproj \
             libxs/libxs.vcxproj.filters \
             platform.hpp msvc10.sln

PERF_DIST = local_thr/local_thr.vcxproj \
            remote_thr/remote_thr.vcxproj \
            local_lat/local_lat.vcxproj \
            remote_lat/remote_lat.vcxproj \
            inproc_lat/inproc_lat.vcxproj \
            inproc_thr/inproc_thr.vcxproj

PROPERTIES_DIST = properties/Common.props \
                  properties/Debug.props \
                  properties/Dynamic.props \
                  properties/Executable.props \
                  properties/Precompiled.props \
                  properties/Release.props \
                  properties/Win32.props \
                  properties/Win32_Release.props \
                  properties/WithOpenPGM.props \
                  properties/x64.props \
                  properties/Crossroads.props

PRECOMPILED_DIST = ../../src/precompiled.hpp \
                   ../../src/precompiled.cpp

TESTS_DIST = tests/tests.vcxproj \
             tests/tests.vcxproj.filters

LIBZMQ_DIST = libzmq/libzmq.vcxproj \
              libzmq/libzmq.vcxproj.filters

EXTRA_DIST = $(LIBXS_DIST) $(PERF_DIST) $(PROPERTIES_DIST) $(PRECOMPILED_DIST) \
             $(TESTS_DIST) $(LIBZMQ_DIST)
